--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.2.1",
+    "bootstrap-material-design": "^4.1.2",
+    "jquery": "^3.4.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-html-parser": "^2.0.2",
@@ -13,7 +14,7 @@
     "react-scripts": "2.1.3",
     "reactstrap": "^7.0.2"
   },
-  "scripts": {    
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
