--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
-    "babel-plugin-named-asset-import": "^0.3.0",
-    "babel-preset-react-app": "^7.0.0",
+    "babel-plugin-named-asset-import": "^0.3.3",
+    "babel-preset-react-app": "^7.0.2",
     "bfj": "6.1.1",
     "bootstrap": "^4.3.1",
     "bootstrap-material-design": "^4.1.2",
@@ -21,15 +21,15 @@
     "css-loader": "^1.0.1",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "5.6.0",
-    "eslint-config-react-app": "^3.0.6",
+    "eslint": "^5.6.0",
+    "eslint-config-react-app": "^3.0.8",
     "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
-    "file-loader": "2.0.0",
-    "fork-ts-checker-webpack-plugin-alt": "0.4.14",
+    "file-loader": "^2.0.0",
+    "fork-ts-checker-webpack-plugin-alt": "^0.4.14",
     "fs-extra": "7.0.0",
     "history": "^4.9.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
@@ -39,19 +39,19 @@
     "jest-resolve": "23.6.0",
     "jquery": "^3.4.1",
     "jquery-parallax.js": "^1.5.0",
-    "mini-css-extract-plugin": "^0.4.3",
+    "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "6.3.1",
-    "postcss-safe-parser": "4.0.1",
+    "postcss-safe-parser": "^4.0.1",
     "precss": "^4.0.0",
-    "react": "^16.7.0",
-    "react-app-polyfill": "^0.2.0",
-    "react-dev-utils": "^7.0.1",
-    "react-dom": "^16.7.0",
+    "react": "^16.9.0",
+    "react-app-polyfill": "^0.2.2",
+    "react-dev-utils": "^7.0.5",
+    "react-dom": "^16.9.0",
     "react-html-parser": "^2.0.2",
     "react-parallax": "^2.2.0",
     "react-quill": "^1.3.3",
